# mtailor_mlops_assessment

./: .pre-commit-config.yaml  Dockerfile  README.md  cerebrium.toml  main.py  model.py  pyproject.toml  test.py  test_server.py
.github/workflows/: ci.yml
src/: convert_to_onnx.py  model.py  pytorch_model.py
